--- a/css/style.css
+++ b/css/style.css
@@ -58,3 +58,135 @@ a {
   padding: 0 15px;
   margin: 0 auto;
 }
+.app {
+  padding: 50px 0;
+}
+.app__title {
+  font-size: 50px;
+  color: var(--text-color);
+  margin: 0;
+  margin-bottom: 60px;
+}
+.app__error {
+  display: none;
+  font-size: 20px;
+  color: var(--error-color);
+}
+.app__loading {
+  font-size: 20px;
+  color: var(--text-color);
+}
+.app__pagination {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 15px;
+}
+.app__pagination-link {
+  font-size: 20px;
+  color: var(--text-color);
+  outline: none;
+  transition: color 0.3s ease-in-out;
+}
+.app__pagination-link--current {
+  color: var(--accent-color);
+  pointer-events: none;
+}
+.app__pagination-link:hover {
+  color: var(--accent-color);
+}
+.app__pagination-link:focus-visible {
+  color: var(--accent-color);
+}
+.app__list {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 30px;
+  margin: 30px 0;
+}
+.movie-card__link {
+  display: block;
+  outline: none;
+}
+.movie-card__link:hover  .movie-card__hover {
+  opacity: 1;
+}
+.movie-card__link:focus-visible  .movie-card__hover {
+  opacity: 1;
+}
+.movie-card__image-wrapper {
+  position: relative;
+}
+.movie-card__img {
+  display: block;
+  width: 100%;
+  height: 360px;
+  margin-bottom: 10px;
+}
+.movie-card__hover {
+  position: absolute;
+  inset: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  color: var(--third-text-color);
+  background-color: rgba(0, 0, 0, 0.8);
+  padding: 15px;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+.movie-card__rating {
+  font-size: 35px;
+  color: var(--accent-color);
+  margin-bottom: auto;
+}
+.movie-card__rating--null {
+  font-size: 20px;
+  color: var(--second-text-color);
+}
+.movie-card__genres {
+  word-break: break-word;
+}
+.movie-card__duration {
+  margin-top: 5px;
+}
+.movie-card__duration-hidden {
+  display: none;
+}
+.movie-card__title {
+  font-size: 20px;
+  color: var(--text-color);
+  margin: 0;
+  margin-bottom: 5px;
+}
+.movie-card__date {
+  color: var(--second-text-color);
+}
+
+@media (max-width: 1280px) {
+  .app__list {
+    grid-template-columns: repeat(4, 1fr);
+  }
+  .movie-card__img {
+    width: 100%;
+    height: 400px;
+  }
+}
+@media (max-width: 992px) {
+  .app__list {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media (max-width: 768px) {
+  .app__list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 576px) {
+  .app__title {
+    font-size: 40px;
+  }
+  .movie-card__img {
+    height: 250px;
+  }
+}
